#36 test for record added